--- a/style.css
+++ b/style.css
@@ -28,15 +28,15 @@ body {
     background-color: white;
     border: 2px solid black;
     border-radius: 5px;
-    display: flex;
-    justify-content: end;
-    align-items: flex-end;
     font-size: 50px;
     min-height: 175px;
-    max-height: 175px;
     padding-right: 10px;
     padding-left: 10px;
+    overflow-wrap: break-word;
+    text-align: end;
+    overflow: auto;
 }
+
 
 /* ALL BUTTONS */
 button:hover {
