--- a/style.css
+++ b/style.css
@@ -2,11 +2,17 @@
     gap: 5px;
 }
 
+@font-face{
+    font-family:'digital-7';
+    src: url('digital-7.ttf');
+   }
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color:cadetblue;
+    box-sizing: border-box;
 }
 
 /* CALCULATOR BODY */
@@ -20,28 +26,34 @@ body {
     border-radius: 10px;
     box-shadow: 5px 5px;
     padding: 30px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 /* SCREEN/DISPLAY */
 .screen {
-    background-color: white;
+    background-color:lightgray;
     border: 2px solid black;
     border-radius: 5px;
     font-size: 50px;
     min-height: 175px;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding: 15px;
     overflow-wrap: break-word;
     text-align: end;
     overflow: auto;
+    font-family: digital-7;
+    line-height: 40px;
 }
 
 
 /* ALL BUTTONS */
 button:hover {
     cursor:pointer;
-    background-color:lightslategrey;
+    background-color:gainsboro;
+}
+
+button:active {
+    cursor:pointer;
+    background-color:gray;
 }
 
 /* BUTTON BODY */
@@ -57,7 +69,6 @@ button:hover {
     justify-content: center;
     align-items: center;
     gap: 5px;    
-
 }
 
 .clear-buttons > button {
@@ -66,6 +77,30 @@ button:hover {
     font-size: 20px;
     border: 2px solid black;
     border-radius: 5px;
+}
+
+.clear-buttons > #delete {
+    background-color: red;
+}
+
+#delete:hover {
+    background-color: rgb(212, 1, 1);
+}
+
+#delete:active {
+    background-color: rgb(172, 1, 1);
+}
+
+.clear-buttons > #clear {
+    background-color:aqua;
+}
+
+#clear:hover {
+    background-color:rgb(3, 230, 230);
+}
+
+#clear:active {
+    background-color:rgb(0, 185, 185);
 }
 
 /* NUMBER PAD */
@@ -81,4 +116,13 @@ button:hover {
     font-size: 20px;
     border: 2px solid black;
     border-radius: 5px;
+}
+
+/* FOOTER */
+.footer {
+    position: absolute;
+    bottom: 0;
+    font-weight: bold;
+    font-size: 22px;
+    margin-bottom: 10px;
 }
